# DjangoSimple

./: Makefile  README.md  models.py  pyproject.toml
DjangoSimple/: asgi.py  settings.py  urls.py  wsgi.py
api_app/: api.py  models.py
api_app/migrations/: 0001_initial.py
migrations/: 0001__initial.sql  001__initial.sql
polls/: views.py
